[KAN-161] refactor(product): BE 쿼리 프로젝션 DTO를 이용한 service와 repository 로직 개선