@@ -1,20 +1,15 @@
 package kr.or.kosa.cmsplusmain.domain.product.service;
 
-import com.querydsl.core.Tuple;
 import kr.or.kosa.cmsplusmain.domain.base.dto.SortPageDto;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 import kr.or.kosa.cmsplusmain.domain.product.dto.ProductRes;
 import kr.or.kosa.cmsplusmain.domain.product.entity.Product;
 import kr.or.kosa.cmsplusmain.domain.product.repository.ProductCustomRepository;
 import kr.or.kosa.cmsplusmain.domain.product.repository.ProductRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import static kr.or.kosa.cmsplusmain.domain.contract.entity.QContractProduct.contractProduct;
-import static kr.or.kosa.cmsplusmain.domain.product.entity.QProduct.product;
 
 @Slf4j
 @Service
@@ -25,7 +20,12 @@ public class ProductService {
     private final ProductRepository productRepository;
     private final ProductCustomRepository productCustomRepository;
 
-    public ProductRes findById(Long productId) {
+    // 상품 상세 조회
+    public ProductRes findById(Long productId, String vendorUserName) {
+
+        // 해당 상품들 주인이 맞는지 검증
+        validateProductUser(productId, vendorUserName);
+
         // 계약 건수
         int contractNum = productCustomRepository
                 .getContractNumber(productId);
@@ -37,24 +37,25 @@ public class ProductService {
 
         // 계약 건수 + 상품 정보
         return ProductRes.fromEntity(product, contractNum);
+
     }
 
+    // 상품 목록 조회
     public SortPageDto.Res<ProductRes> findProductsByUser(String vendorUserName, SortPageDto.Req pageable) {
+
         int countProductListItem = productCustomRepository.countAllProducts(vendorUserName);
         int totalPages = (int) Math.ceil((double) countProductListItem / pageable.getSize());
-        List<Tuple> productListTuples = productCustomRepository.findProductListWithCondition(vendorUserName, pageable);
 
-        List<ProductRes> productList = productListTuples
+        List<ProductRes> productList = productCustomRepository.findProductListWithCondition(vendorUserName, pageable)
                 .stream()
-                .map(tuple -> ProductRes.fromEntity(
-                        tuple.get(product), // 튜플 stream
-                        tuple.get(contractProduct.contract.countDistinct()).intValue()
-                ))
-                .collect(Collectors.toList());
+                .map(pqr -> pqr.toProductRes())
+                .toList();
 
         return new SortPageDto.Res<>(totalPages, productList);
+
     }
 
+    // 유효성 검증
     public void validateProductUser(Long productId, String vendorUserName) {
         if (!productCustomRepository.isExistProductByUsername(productId, vendorUserName)) {
             throw new IllegalArgumentException("Not Owner");
